# pydantic-agents

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  render.yaml
backend/: config.py  database.py  main.py  models.py  observability.py
backend/pipeline/: embeddings.py  generation.py  retrieval.py  verification.py
backend/prices/: anthropic_2026-03-27.yml  openai_2026-03-27.yml
dashboards/: logfire_costs.json  logfire_pipeline.json  logfire_quality.json
data/scripts/: add_ai_agent_template_page.py  add_autoscaling_page.py  add_nodejs_page.py  add_voice_agent_page.py  ingest_docs.py
docs/: CONFIGURATION.md
frontend/: tailwind.config.js
frontend/public/: site.webmanifest
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnswerDisplay.tsx  HistoryPanel.tsx  MetricsPanel.tsx  MetricsSkeleton.tsx  QuestionInput.tsx
frontend/src/lib/: api.ts
