[project]
name = "logfire-pydantic"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

dependencies = [
    # Web Framework
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.6.1",
    "typing-extensions>=4.12.2",
    # AI & LLM
    "pydantic-ai>=1.0.0",
    "openai>=2.2.0",
    "anthropic>=0.69.0",
    # Observability
    "logfire[system-metrics,asyncpg,httpx,fastapi]>=4.12.0",
    # Database
    "pgvector>=0.2.5,<0.3.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "python-multipart>=0.0.12",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "pyyaml>=6.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "black==24.10.0",
    "ruff==0.7.4",
]
